# libsn3218

./: .gitignore  Makefile.am  README.md  configure.ac  libsn3218.pc.in
cfg/: Makefile.am
doc/: Makefile.am
lib/: Makefile.am  sn3218.c  sn3218.h
tests/: Makefile.am  check_sn3218_fails.c  check_sn3218_init.c  check_sn3218_set1.c  check_sn3218_setm.c  check_sn3218_unset.c
