## Copyright (C) 2020  Trevor Woerner <twoerner@gmail.com>
## SPDX-License-Identifier: OSL-3.0

########################
## top-level Makefile.am
########################
SUBDIRS = @SUBDIRS@
DIST_SUBDIRS = cfg @SUBDIRS@

EXTRA_DIST = README.md libsn3218.pc.in
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libsn3218.pc
